additional tasks implementation
